# co_de

./: .gitignore  CMakeLists.txt  README.md  compressed.huff  compressed.lzw  decompressed.txt  file.huff  file.txt  input.txt  main  main.cpp  main_backup.txt  main_backup2.txt  note.md  vcpkg.json
.cache/clangd/index/: main.cpp.BC09446C6776E7CD.idx
backup/: main_bk.txt  main_img.cpp  main_lzw1.cpp  main_lzw6.cpp  main_text.cpp  requirements.txt
include/: huffman.hpp  lzw.hpp
src/: huffman.cpp  lzw.cpp
test/test_1 - Copy/: input1.txt  main_bk.cpp
test/test_1 - Copy/test_1/: input.txt
